--- a/app/index.html
+++ b/app/index.html
@@ -74,29 +74,29 @@
 
     <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-            <h2>Введение</h2>
-            <p>Компьютеры настолько широко вошли в нашу жизнь, что мы уже и не представляем, как люди обходились без них
+            <h2 class="title-2">Введение</h2>
+            <p class="text-paragraph">Компьютеры настолько широко вошли в нашу жизнь, что мы уже и не представляем, как люди обходились без них
                 раньше. На современных компьютерах пишут и рисуют, делают мультфильмы, рекламные ролики и специальные
                 эффекты для фильмов. Особые программы помогают учиться, проектировать космические ракеты и города,
                 предсказывать погоду. Компьютеры позволяют создавать и записывать музыку, производить сложные научные
                 рассчеты и эксперименты, восстанавливать облик вымерших животных, прогнозировать будущее. Самые
                 интересные игры сегодня – это опять-таки компьютерные игры. Удивительно, но в основе всех перечисленных
                 профессий лежит всего лишь одно умение компьютера – умение производить математические вычисления
-                (сложение, вычитание, умножение, деление и т.д.) в определенной последовательности. Именно поэтому
+                (сложение, вычитание, умножение, деление и т. д.) в определенной последовательности. Именно поэтому
                 компьютеры часто именуют Электронными Вычислительными Машинами (ЭВМ).</p>
         </div>
 
         <div class="tab-pane fade" id="list-biography" role="tabpanel" aria-labelledby="list-biography-list">
-            <h2>История ЭВМ</h2>
-            <h3>Вычислительные устройства</h3>
-            <p>Человечество с глубокой древности пыталось облегчить себе жизнь, изобретая разнообразные приспособления и
+            <h2 class="title-2">История ЭВМ</h2>
+            <h3 class="title-3">Вычислительные устройства</h3>
+            <p class="text-paragraph">Человечество с глубокой древности пыталось облегчить себе жизнь, изобретая разнообразные приспособления и
                 устройства для вычислений. Уже несколько тысяч лет назад появились первые счеты – абак. В Финикии,
                 Греции, Древнем Египте, Риме камешки передвигались по линиям и желобкам, а в Китае камешки заменили
                 шариками-бусинками, нанизанными на проволоки или веревки. В 16 веке у нас в стране появились счеты.
                 Благодаря тому, что счеты основывались на десятичной системе, на них было возможно быстро выполнять не
                 только сложение, вычитание, умножение, но и деление. Счетами пользовались купцы, мастера-ремесленники,
                 государственные служащие и простые крестьяне.</p>
-            <p>С древности известно несколько попыток создания механической вычислительной машины. Один из вариантов
+            <p class="text-paragraph">С древности известно несколько попыток создания механической вычислительной машины. Один из вариантов
                 предложил великий художник Леонардо да Винчи, другой – немецкий изобретатель Вильгельм Шиккард. Но по
                 тем или иным причинам эти машины не были построены и остались лишь на бумаге. Первую работающую
                 вычислительную машину создал выдающийся французский философ и ученый Блез Паскаль. В 1642 году он
@@ -107,21 +107,21 @@
                 вычитание, умножение и деление, а также извлекала квадратный корень. Специально для своей машины Лейбниц
                 впервые применил двоичную систему счисления, использующую вместо десяти цифр всего две: ноль и единицу.
                 Именно такая система счета принята в современных компьютерах.</p>
-            <p>Машины учились не только считать. В 1804 году для однообразной работы по выделке тканей с узором
+            <p class="text-paragraph">Машины учились не только считать. В 1804 году для однообразной работы по выделке тканей с узором
                 французский изобретатель Жаккак сконструировал ткацкий станок, который сам мог ткать ткани со сложным
                 узором. Для этого иглы и крючки на станке проходили через плотную бумагу с пробитыми отверстиями.
                 Процесс выделки узора похож на математические вычисления: ведь и в том и в другом случае необходимо
                 соблюдать строгую последовательность действий. Поэтому такие карты (перфокарты) в скором времени
                 заинтересовали и математиков.</p>
-            <p>В 1823 году английский математик Чарлз Бэббидж приступил к созданию разностной машины, которая отличалась
+            <p class="text-paragraph">В 1823 году английский математик Чарлз Бэббидж приступил к созданию разностной машины, которая отличалась
                 от предшествующих машин тем, что в процессе вычислений не требовалось участие человека. На постройку
                 этой машины у Бэббиджа ушло 10 лет. В 1830 году Бэббидж спроектировал еще более совершенную
                 аналитическую машину, которая однако не была построена ввиду технических проблем.</p>
-            <p>В 1885 году американский изобретатель Уильям Барроуз создал самопишущий арифмометр. Его машина имела
+            <p class="text-paragraph">В 1885 году американский изобретатель Уильям Барроуз создал самопишущий арифмометр. Его машина имела
                 клавиатуру для ввода данных и печатное устройство для вывода результатов. Не были забыты и перфокарты. В
                 то же время появились пианолы – приставки к пианино, которые механически нажимали на клавиши.
                 Последовательность нажатий клавиш задавалась перфокартами.</p>
-            <p>К концу 19 века уже широко применялась электрическая энергия. Для изобретателей открылись новые
+            <p class="text-paragraph">К концу 19 века уже широко применялась электрическая энергия. Для изобретателей открылись новые
                 возможности. В 1888 году американский инженер Герман Холлерит сконструировал первую электромеханическую
                 счетную машину. Эта машина, названная табулятором, имела в своем составе реле, счетчики, сортировочный
                 ящик. Она могла считывать и сортировать статистические записи, закодированные на перфокартах. В 1890
@@ -129,95 +129,113 @@
                 ожидания. То, чем за десять лет до этого 500 сотрудников занимались в течение семи лет, Холлерит сделал
                 с 43 помошниками на 43 вычислительных машинах за 4 недели.</p>
 
-            <h3>Развитие ЭВМ</h3>
-            <p>В 1941 году немецкий инженер Конрад Цузе создал первый вычислительный автомат с программным управлением,
+            <h3 class="title-3">Развитие ЭВМ</h3>
+            <p class="text-paragraph">В 1941 году немецкий инженер Конрад Цузе создал первый вычислительный автомат с программным управлением,
                 который считается первым компьютером – модель Z3. Машина Цузе была основана на электромеханических реле
                 и работала в двоичной системе счисления. Числа можно было записывать в память и считывать оттуда
                 посредством электрических сигналов, которые проходили через реле. Управляющая программа была
                 закодирована при помощи перфорированной ленты.</p>
-            <p>В США в 1943 году Говард Эйкен создал компьтер «Марк-1», который делал вычисления уже в сотни раз
+            <p class="text-paragraph">В США в 1943 году Говард Эйкен создал компьтер «Марк-1», который делал вычисления уже в сотни раз
                 быстрее, чем на арифмометре. Следующие разработки стали делать на основе электронных ламп, что позволило
                 увеличить скорость в тысячу раз. Первой была машина ЭНИАК Джона Мокли и Преспера Эккерта (1943). Сами
                 расчеты на ней занимали несколько минут или секунд, но каждый раз для задания программы приходилось
                 долгое время присоединять провода – для каждой программы в нужном порядке.</p>
-            <p>В 1948 появились транзисторы. С их активным внедрением появилось второе поколение компьютеров. Один
+            <p class="text-paragraph">В 1948 появились транзисторы. С их активным внедрением появилось второе поколение компьютеров. Один
                 транзистор был способен заменить 40 электронных ламп. В результате бысродействие машин возросло в 10
                 раз. Первые компьютеры на транзисторах были созданы в конце 1950-х годов.</p>
-            <p>В 1959 году были изобретены интегральные микросхемы. Все электронные компоненты вместе с проводниками
+            <p class="text-paragraph">В 1959 году были изобретены интегральные микросхемы. Все электронные компоненты вместе с проводниками
                 помещались внутрь кремнеевой пластинки. Таким образом увеличивалось количество вычисляющих компонент, и
                 скорость их работы повышалась в десятки раз. Уменьшились и габариты машин. С появленим микросхем (чипов)
                 началось третье поколение компьютеров. Изобретатель чипа Роберт Нойс основал фирму Intel (Интел),
                 которая сейчас выпускает большую часть процессоров.</p>
-            <p>В конце 1950-х годов были разработаны компьютерные языки FORTRAN и ALGOL. Появилась профессия
+            <p class="text-paragraph">В конце 1950-х годов были разработаны компьютерные языки FORTRAN и ALGOL. Появилась профессия
                 программиста. Ученый исследователь описывал программисту задание, которое должна была выполнить машина,
                 а программист это задание писал на специальном языке. Работа эта была сложной и творческой, каждая
                 программа была уникальна.</p>
-            <p>С конца 1960-х годов была открыта еще одна возможность использования компьютеров. Впервые несколько машин
+            <p class="text-paragraph">С конца 1960-х годов была открыта еще одна возможность использования компьютеров. Впервые несколько машин
                 были соединены в сеть Министерства обороны США. Передача информации от компьютера к компьюьеру открыла
                 новые возможности. Такие сети стали создавать также университеты разных городов. Так рождались
                 глобальные сети типа Интернет, которые теперь объединяют весь мир.</p>
-            <p>В начале 1975 года появился персональный компьютер Altair на основе микропроцессора Intel 8080. Он
+            <p class="text-paragraph">В начале 1975 года появился персональный компьютер Altair на основе микропроцессора Intel 8080. Он
                 управлялся при помощи специальной панели переключателей. Для ввода и вывода данных использовался
                 дисковод 8-дюймовых гибких дисков, приобретавшийся отдельно. Altair был первым компьютером, который
                 выпускался для частных лиц и приобретался через торговую сеть.</p>
-            <p>С конца 1970-х годов компания IBM начала выпуск своих персональных компьютеров (ПК). Они делались по
+            <p class="text-paragraph">С конца 1970-х годов компания IBM начала выпуск своих персональных компьютеров (ПК). Они делались по
                 принципу детского конструктора из набора деталей, поэтому их можно было быстро совершенствовать.</p>
-            <p>В то же время компьютеры перестают использоваться лишь для математических рассчетов, их широко используют
-                для работы с текстом, картинками, звуком и т.д. Начинают выпускаться программы, с которыми могут
+            <p class="text-paragraph">В то же время компьютеры перестают использоваться лишь для математических рассчетов, их широко используют
+                для работы с текстом, картинками, звуком и т. д. Начинают выпускаться программы, с которыми могут
                 работать не только специалисты, но и обычные пользователи. Наконец, появляются первые компьютерные игры.
                 Как и любое техническое изобретение, компьютер прошел свой путь от «чуда» до обыкновенного предмета,
                 необходимого для работы и развлечений.</p>
 
-            <h3>Деление на этапы</h3>
-            <p>Все этапы развития ЭВМ принято условно делить на поколения.</p>
-            <p>Первое поколение создавалось на основе вакуумных электроламп, машина управлялась с пульта и перфокарт с
+            <h3 class="title-3">Деление на этапы</h3>
+            <p class="text-paragraph">Все этапы развития ЭВМ принято условно делить на поколения.</p>
+            <p class="text-paragraph">Первое поколение создавалось на основе вакуумных электроламп, машина управлялась с пульта и перфокарт с
                 использованием машинных кодов. Эти ЭВМ размещались в нескольких больших металлических шкафах, занимавших
                 целые залы.</p>
-            <p>Второе поколение появилось в 60-е годы 20 века. Элементы ЭВМ выполнялись на основе полупроводниковых
+            <p class="text-paragraph">Второе поколение появилось в 60-е годы 20 века. Элементы ЭВМ выполнялись на основе полупроводниковых
                 транзисторов. Эти машины обрабатывали информацию под управлением программ на языке Ассемблер. Ввод
                 данных и программ осуществлялся с перфокарт и перфолент.</p>
-            <p>Третье поколение выполнялось на микросхемах, содержавших на одной пластинке сотни или тысячи
+            <p class="text-paragraph">Третье поколение выполнялось на микросхемах, содержавших на одной пластинке сотни или тысячи
                 транзисторов. Пример машины третьего поколения - ЕС ЭВМ. Управление работой этих машин происходило с
                 алфавитно-цифровых терминалов. Для управления использовались языки высокого уровня и Ассемблер. Данные и
                 программы вводились как с терминала, так и с перфокарт и перфолент.</p>
-            <p>Четвертое поколение было создано на основе больших интегральных схем (БИС). Наиболее яркие представители
+            <p class="text-paragraph">Четвертое поколение было создано на основе больших интегральных схем (БИС). Наиболее яркие представители
                 четвертого поколения ЭВМ - персональные компьютеры (ПК). Персональной называется универсальная
                 однопользовательская микроЭВМ. Связь с пользователем осуществлялась посредством цветного графического
                 дисплея с использованием языков высокого уровня.</p>
-            <p>Пятое поколение создано на основе сверхбольших интегральных схем (СБИС), которые отличаются колоссальной
+            <p class="text-paragraph">Пятое поколение создано на основе сверхбольших интегральных схем (СБИС), которые отличаются колоссальной
                 плотностью размещения логических элементов на кристалле.</p>
         </div>
 
         <div class="tab-pane fade" id="list-gallery" role="tabpanel" aria-labelledby="list-gallery-list">
-            <h2>Галерея</h2>
+            <h2 class="title-2">Галерея</h2>
 
             <div class="pictures">
                 <div class="item">
-                    <img src="img/gallery_1.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_1.jpg" alt="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="img/gallery_4.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_4.jpg" alt="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="img/gallery_3.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_3.jpg" alt="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="img/gallery_1.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_1.jpg" alt="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="img/gallery_3.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_3.jpg" alt="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="img/gallery_2.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_2.jpg" alt="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="img/gallery_3.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_3.jpg" alt="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="img/gallery_5.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_5.jpg" alt="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img src="img/gallery_6.jpg" alt="">
+                    <a class="image" href="#">
+                        <img src="img/gallery_6.jpg" alt="">
+                    </a>
                 </div>
             </div>
         </div>
