home commit, gallery+

--- a/app/index.html
+++ b/app/index.html
@@ -189,52 +189,50 @@
         </div>
 
         <div class="tab-pane fade" id="list-gallery" role="tabpanel" aria-labelledby="list-gallery-list">
-            <h2 class="title-2">Галерея</h2>
-
-            <div class="pictures">
+            <div id="pictures">
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_1.jpg" alt="">
+                        <img src="img/gallery_1.jpg" title="Что-то о картинке..." alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_4.jpg" alt="">
+                        <img src="img/gallery_4.jpg" title="Что-то о картинке..." alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_3.jpg" alt="">
+                        <img src="img/gallery_3.jpg" title="Что-то о картинке..." alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_1.jpg" alt="">
+                        <img src="img/gallery_1.jpg" title="Что-то о картинке..." alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_3.jpg" alt="">
+                        <img src="img/gallery_3.jpg" title="Что-то о картинке..." alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_2.jpg" alt="">
+                        <img src="img/gallery_2.jpg" title="Что-то о картинке..." alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_3.jpg" alt="">
+                        <img src="img/gallery_3.jpg" title="Что-то о картинке..." alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_5.jpg" alt="">
+                        <img src="img/gallery_5.jpg" title="DAMN." alt="">
                     </a>
                 </div>
-                <div class="item" data-toggle="modal" data-target="#exampleModalCenter">
+                <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_6.jpg" alt="">
+                        <img src="img/gallery_6.jpg" title="Самир Байрамов" alt="">
                     </a>
                 </div>
             </div>
@@ -246,21 +244,6 @@
     <div class="footer-content">
     </div>
 </footer>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-            </div>
-            <div class="modal-body">
-                <img src="img/gallery_2.jpg" alt="">
-            </div>
-            <div class="modal-footer">Modal footer</div>
-        </div>
-    </div>
-</div>
 
 <script src="js/scripts.min.js"></script>
 
