minor fixes, header+, footer+

--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,14 @@
 <span id="bar"></span>
 
 <header>
-    <div class="header_top"></div>
-    <div class="header_bottom"></div>
+    <div class="header-inner">
+        <div class="logo">
+            <a href="#">Логотип</a>
+        </div>
+        <div class="about">
+            <a href="#">О проекте</a>
+        </div>
+    </div>
 </header>
 
 <section class="main">
@@ -45,9 +51,7 @@
                 <span class="icon">
                     <i class="fas fa-home"></i>
                 </span>
-                <span class="title">
-                    Главная
-                </span>
+                <span class="title">Главная</span>
             </a>
 
             <a class="list-group-item list-group-item-action" id="list-biography-list" data-toggle="list"
@@ -55,9 +59,7 @@
                 <span class="icon">
                     <i class="fas fa-book"></i>
                 </span>
-                <span class="title">
-                    История ЭВМ
-                </span>
+                <span class="title">История ЭВМ</span>
             </a>
 
             <a class="list-group-item list-group-item-action" id="list-gallery-list" data-toggle="list"
@@ -65,17 +67,16 @@
                 <span class="icon">
                     <i class="fas fa-images"></i>
                 </span>
-                <span class="title">
-                    Галерея
-                </span>
+                <span class="title">Галерея</span>
             </a>
         </div>
     </nav>
 
     <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-            <h2 class="title-2">Введение</h2>
-            <p class="paragraph">Компьютеры настолько широко вошли в нашу жизнь, что мы уже и не представляем, как люди обходились без них
+            <h2 class="title-2">Предисловие</h2>
+            <p class="paragraph">Компьютеры настолько широко вошли в нашу жизнь, что мы уже и не представляем, как люди
+                обходились без них
                 раньше. На современных компьютерах пишут и рисуют, делают мультфильмы, рекламные ролики и специальные
                 эффекты для фильмов. Особые программы помогают учиться, проектировать космические ракеты и города,
                 предсказывать погоду. Компьютеры позволяют создавать и записывать музыку, производить сложные научные
@@ -88,15 +89,16 @@
 
         <div class="tab-pane fade" id="list-biography" role="tabpanel" aria-labelledby="list-biography-list">
             <h2 class="title-2">История ЭВМ</h2>
-            <h3 class="title-3">Вычислительные устройства</h3>
-            <p class="paragraph">Человечество с глубокой древности пыталось облегчить себе жизнь, изобретая разнообразные приспособления и
+            <p class="paragraph">Человечество с глубокой древности пыталось облегчить себе жизнь, изобретая
+                разнообразные приспособления и
                 устройства для вычислений. Уже несколько тысяч лет назад появились первые счеты – абак. В Финикии,
                 Греции, Древнем Египте, Риме камешки передвигались по линиям и желобкам, а в Китае камешки заменили
                 шариками-бусинками, нанизанными на проволоки или веревки. В 16 веке у нас в стране появились счеты.
                 Благодаря тому, что счеты основывались на десятичной системе, на них было возможно быстро выполнять не
                 только сложение, вычитание, умножение, но и деление. Счетами пользовались купцы, мастера-ремесленники,
                 государственные служащие и простые крестьяне.</p>
-            <p class="paragraph">С древности известно несколько попыток создания механической вычислительной машины. Один из вариантов
+            <p class="paragraph">С древности известно несколько попыток создания механической вычислительной машины.
+                Один из вариантов
                 предложил великий художник Леонардо да Винчи, другой – немецкий изобретатель Вильгельм Шиккард. Но по
                 тем или иным причинам эти машины не были построены и остались лишь на бумаге. Первую работающую
                 вычислительную машину создал выдающийся французский философ и ученый Блез Паскаль. В 1642 году он
@@ -107,21 +109,25 @@
                 вычитание, умножение и деление, а также извлекала квадратный корень. Специально для своей машины Лейбниц
                 впервые применил двоичную систему счисления, использующую вместо десяти цифр всего две: ноль и единицу.
                 Именно такая система счета принята в современных компьютерах.</p>
-            <p class="paragraph">Машины учились не только считать. В 1804 году для однообразной работы по выделке тканей с узором
+            <p class="paragraph">Машины учились не только считать. В 1804 году для однообразной работы по выделке тканей
+                с узором
                 французский изобретатель Жаккак сконструировал ткацкий станок, который сам мог ткать ткани со сложным
                 узором. Для этого иглы и крючки на станке проходили через плотную бумагу с пробитыми отверстиями.
                 Процесс выделки узора похож на математические вычисления: ведь и в том и в другом случае необходимо
                 соблюдать строгую последовательность действий. Поэтому такие карты (перфокарты) в скором времени
                 заинтересовали и математиков.</p>
-            <p class="paragraph">В 1823 году английский математик Чарлз Бэббидж приступил к созданию разностной машины, которая отличалась
+            <p class="paragraph">В 1823 году английский математик Чарлз Бэббидж приступил к созданию разностной машины,
+                которая отличалась
                 от предшествующих машин тем, что в процессе вычислений не требовалось участие человека. На постройку
                 этой машины у Бэббиджа ушло 10 лет. В 1830 году Бэббидж спроектировал еще более совершенную
                 аналитическую машину, которая однако не была построена ввиду технических проблем.</p>
-            <p class="paragraph">В 1885 году американский изобретатель Уильям Барроуз создал самопишущий арифмометр. Его машина имела
+            <p class="paragraph">В 1885 году американский изобретатель Уильям Барроуз создал самопишущий арифмометр. Его
+                машина имела
                 клавиатуру для ввода данных и печатное устройство для вывода результатов. Не были забыты и перфокарты. В
                 то же время появились пианолы – приставки к пианино, которые механически нажимали на клавиши.
                 Последовательность нажатий клавиш задавалась перфокартами.</p>
-            <p class="paragraph">К концу 19 века уже широко применялась электрическая энергия. Для изобретателей открылись новые
+            <p class="paragraph">К концу 19 века уже широко применялась электрическая энергия. Для изобретателей
+                открылись новые
                 возможности. В 1888 году американский инженер Герман Холлерит сконструировал первую электромеханическую
                 счетную машину. Эта машина, названная табулятором, имела в своем составе реле, счетчики, сортировочный
                 ящик. Она могла считывать и сортировать статистические записи, закодированные на перфокартах. В 1890
@@ -130,39 +136,48 @@
                 с 43 помошниками на 43 вычислительных машинах за 4 недели.</p>
 
             <h3 class="title-3">Развитие ЭВМ</h3>
-            <p class="paragraph">В 1941 году немецкий инженер Конрад Цузе создал первый вычислительный автомат с программным управлением,
+            <p class="paragraph">В 1941 году немецкий инженер Конрад Цузе создал первый вычислительный автомат с
+                программным управлением,
                 который считается первым компьютером – модель Z3. Машина Цузе была основана на электромеханических реле
                 и работала в двоичной системе счисления. Числа можно было записывать в память и считывать оттуда
                 посредством электрических сигналов, которые проходили через реле. Управляющая программа была
                 закодирована при помощи перфорированной ленты.</p>
-            <p class="paragraph">В США в 1943 году Говард Эйкен создал компьтер «Марк-1», который делал вычисления уже в сотни раз
+            <p class="paragraph">В США в 1943 году Говард Эйкен создал компьтер «Марк-1», который делал вычисления уже в
+                сотни раз
                 быстрее, чем на арифмометре. Следующие разработки стали делать на основе электронных ламп, что позволило
                 увеличить скорость в тысячу раз. Первой была машина ЭНИАК Джона Мокли и Преспера Эккерта (1943). Сами
                 расчеты на ней занимали несколько минут или секунд, но каждый раз для задания программы приходилось
                 долгое время присоединять провода – для каждой программы в нужном порядке.</p>
-            <p class="paragraph">В 1948 появились транзисторы. С их активным внедрением появилось второе поколение компьютеров. Один
+            <p class="paragraph">В 1948 появились транзисторы. С их активным внедрением появилось второе поколение
+                компьютеров. Один
                 транзистор был способен заменить 40 электронных ламп. В результате бысродействие машин возросло в 10
                 раз. Первые компьютеры на транзисторах были созданы в конце 1950-х годов.</p>
-            <p class="paragraph">В 1959 году были изобретены интегральные микросхемы. Все электронные компоненты вместе с проводниками
+            <p class="paragraph">В 1959 году были изобретены интегральные микросхемы. Все электронные компоненты вместе
+                с проводниками
                 помещались внутрь кремнеевой пластинки. Таким образом увеличивалось количество вычисляющих компонент, и
                 скорость их работы повышалась в десятки раз. Уменьшились и габариты машин. С появленим микросхем (чипов)
                 началось третье поколение компьютеров. Изобретатель чипа Роберт Нойс основал фирму Intel (Интел),
                 которая сейчас выпускает большую часть процессоров.</p>
-            <p class="paragraph">В конце 1950-х годов были разработаны компьютерные языки FORTRAN и ALGOL. Появилась профессия
+            <p class="paragraph">В конце 1950-х годов были разработаны компьютерные языки FORTRAN и ALGOL. Появилась
+                профессия
                 программиста. Ученый исследователь описывал программисту задание, которое должна была выполнить машина,
                 а программист это задание писал на специальном языке. Работа эта была сложной и творческой, каждая
                 программа была уникальна.</p>
-            <p class="paragraph">С конца 1960-х годов была открыта еще одна возможность использования компьютеров. Впервые несколько машин
+            <p class="paragraph">С конца 1960-х годов была открыта еще одна возможность использования компьютеров.
+                Впервые несколько машин
                 были соединены в сеть Министерства обороны США. Передача информации от компьютера к компьюьеру открыла
                 новые возможности. Такие сети стали создавать также университеты разных городов. Так рождались
                 глобальные сети типа Интернет, которые теперь объединяют весь мир.</p>
-            <p class="paragraph">В начале 1975 года появился персональный компьютер Altair на основе микропроцессора Intel 8080. Он
+            <p class="paragraph">В начале 1975 года появился персональный компьютер Altair на основе микропроцессора
+                Intel 8080. Он
                 управлялся при помощи специальной панели переключателей. Для ввода и вывода данных использовался
                 дисковод 8-дюймовых гибких дисков, приобретавшийся отдельно. Altair был первым компьютером, который
                 выпускался для частных лиц и приобретался через торговую сеть.</p>
-            <p class="paragraph">С конца 1970-х годов компания IBM начала выпуск своих персональных компьютеров (ПК). Они делались по
+            <p class="paragraph">С конца 1970-х годов компания IBM начала выпуск своих персональных компьютеров (ПК).
+                Они делались по
                 принципу детского конструктора из набора деталей, поэтому их можно было быстро совершенствовать.</p>
-            <p class="paragraph">В то же время компьютеры перестают использоваться лишь для математических рассчетов, их широко используют
+            <p class="paragraph">В то же время компьютеры перестают использоваться лишь для математических рассчетов, их
+                широко используют
                 для работы с текстом, картинками, звуком и т. д. Начинают выпускаться программы, с которыми могут
                 работать не только специалисты, но и обычные пользователи. Наконец, появляются первые компьютерные игры.
                 Как и любое техническое изобретение, компьютер прошел свой путь от «чуда» до обыкновенного предмета,
@@ -170,21 +185,26 @@
 
             <h3 class="title-3">Деление на этапы</h3>
             <p class="paragraph">Все этапы развития ЭВМ принято условно делить на поколения.</p>
-            <p class="paragraph">Первое поколение создавалось на основе вакуумных электроламп, машина управлялась с пульта и перфокарт с
+            <p class="paragraph">Первое поколение создавалось на основе вакуумных электроламп, машина управлялась с
+                пульта и перфокарт с
                 использованием машинных кодов. Эти ЭВМ размещались в нескольких больших металлических шкафах, занимавших
                 целые залы.</p>
-            <p class="paragraph">Второе поколение появилось в 60-е годы 20 века. Элементы ЭВМ выполнялись на основе полупроводниковых
+            <p class="paragraph">Второе поколение появилось в 60-е годы 20 века. Элементы ЭВМ выполнялись на основе
+                полупроводниковых
                 транзисторов. Эти машины обрабатывали информацию под управлением программ на языке Ассемблер. Ввод
                 данных и программ осуществлялся с перфокарт и перфолент.</p>
-            <p class="paragraph">Третье поколение выполнялось на микросхемах, содержавших на одной пластинке сотни или тысячи
+            <p class="paragraph">Третье поколение выполнялось на микросхемах, содержавших на одной пластинке сотни или
+                тысячи
                 транзисторов. Пример машины третьего поколения - ЕС ЭВМ. Управление работой этих машин происходило с
                 алфавитно-цифровых терминалов. Для управления использовались языки высокого уровня и Ассемблер. Данные и
                 программы вводились как с терминала, так и с перфокарт и перфолент.</p>
-            <p class="paragraph">Четвертое поколение было создано на основе больших интегральных схем (БИС). Наиболее яркие представители
+            <p class="paragraph">Четвертое поколение было создано на основе больших интегральных схем (БИС). Наиболее
+                яркие представители
                 четвертого поколения ЭВМ - персональные компьютеры (ПК). Персональной называется универсальная
                 однопользовательская микроЭВМ. Связь с пользователем осуществлялась посредством цветного графического
                 дисплея с использованием языков высокого уровня.</p>
-            <p class="paragraph">Пятое поколение создано на основе сверхбольших интегральных схем (СБИС), которые отличаются колоссальной
+            <p class="paragraph">Пятое поколение создано на основе сверхбольших интегральных схем (СБИС), которые
+                отличаются колоссальной
                 плотностью размещения логических элементов на кристалле.</p>
         </div>
 
@@ -232,7 +252,7 @@
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_6.jpg" title="Самир Байрамов" alt="">
+                        <img src="img/gallery_5.jpg" title="DAMN." alt="">
                     </a>
                 </div>
             </div>
@@ -241,7 +261,9 @@
 </section>
 
 <footer>
-    <div class="footer-content">
+    <div class="footer-inner">
+        <small>Website by <a href="https://github.com/Stryson">Samir Bairamov</a> | <a href="#">Share on Twitter</a>
+        </small>
     </div>
 </footer>
 
