minor-minor fixes, fonts+, "imagination"-

--- a/app/index.html
+++ b/app/index.html
@@ -212,47 +212,47 @@
             <div id="pictures">
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_1.jpg" title="Что-то о картинке..." alt="">
+                        <img src="img/gallery_1.jpg" title="" alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_4.jpg" title="Что-то о картинке..." alt="">
+                        <img src="img/gallery_4.jpg" title="" alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_3.jpg" title="Что-то о картинке..." alt="">
+                        <img src="img/gallery_3.jpg" title="" alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_1.jpg" title="Что-то о картинке..." alt="">
+                        <img src="img/gallery_1.jpg" title="" alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_3.jpg" title="Что-то о картинке..." alt="">
+                        <img src="img/gallery_3.jpg" title="" alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_2.jpg" title="Что-то о картинке..." alt="">
+                        <img src="img/gallery_2.jpg" title="" alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_3.jpg" title="Что-то о картинке..." alt="">
+                        <img src="img/gallery_3.jpg" title="" alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_5.jpg" title="DAMN." alt="">
+                        <img src="img/gallery_5.jpg" title="" alt="">
                     </a>
                 </div>
                 <div class="item">
                     <a class="image" href="#">
-                        <img src="img/gallery_5.jpg" title="DAMN." alt="">
+                        <img src="img/gallery_5.jpg" title="" alt="">
                     </a>
                 </div>
             </div>
