--- a/app/index.html
+++ b/app/index.html
@@ -226,45 +226,80 @@
         <div class="tab-pane fade" id="list-gallery" role="tabpanel" aria-labelledby="list-gallery-list">
             <div class="my-gallery" id="pictures" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a class="image" href="img/gallery_1.jpg" itemprop="contentUrl" data-size="581x581">
+                    <a class="image" href="img/gallery_1.jpg" itemprop="contentUrl" data-size="1000x1000">
                         <img src="img/gallery_1.jpg" itemprop="thumbnail" alt="Image description"/>
                     </a>
+                    <figcaption hidden="hidden">Dirty Computer</figcaption>
                 </figure>
 
                 <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a class="image" href="img/gallery_2.jpg" itemprop="contentUrl" data-size="1200x760">
+                    <a class="image" href="img/gallery_2.jpg" itemprop="contentUrl" data-size="1000x1000">
                         <img src="img/gallery_2.jpg" itemprop="thumbnail" alt="Image description"/>
                     </a>
+                    <figcaption hidden="hidden">KIDS SEE GHOSTS</figcaption>
                 </figure>
 
                 <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a class="image" href="img/gallery_3.jpg" itemprop="contentUrl" data-size="1200x750">
+                    <a class="image" href="img/gallery_3.jpg" itemprop="contentUrl" data-size="1000x1000">
                         <img src="img/gallery_3.jpg" itemprop="thumbnail" alt="Image description"/>
                     </a>
+                    <figcaption hidden="hidden">Rust In Peace</figcaption>
                 </figure>
 
                 <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a class="image" href="img/gallery_4.jpg" itemprop="contentUrl" data-size="1620x2160">
+                    <a class="image" href="img/gallery_4.jpg" itemprop="contentUrl" data-size="1000x1000">
                         <img src="img/gallery_4.jpg" itemprop="thumbnail" alt="Image description"/>
                     </a>
+                    <figcaption hidden="hidden">The Rise And Fall Of Ziggy Stardust And The Spiders From Mars (2012 Remastered Version)</figcaption>
                 </figure>
 
                 <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a class="image" href="img/gallery_5.jpg" itemprop="contentUrl" data-size="1080x1080">
+                    <a class="image" href="img/gallery_5.jpg" itemprop="contentUrl" data-size="1000x1000">
                         <img src="img/gallery_5.jpg" itemprop="thumbnail" alt="Image description"/>
                     </a>
+                    <figcaption hidden="hidden">DAMN. COLLECTORS EDITION.</figcaption>
                 </figure>
 
                 <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a class="image" href="img/gallery_1.jpg" itemprop="contentUrl" data-size="581x581">
+                    <a class="image" href="img/gallery_1.jpg" itemprop="contentUrl" data-size="1000x1000">
                         <img src="img/gallery_1.jpg" itemprop="thumbnail" alt="Image description"/>
                     </a>
+                    <figcaption hidden="hidden">Dirty Computer</figcaption>
                 </figure>
 
                 <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a class="image" href="img/gallery_2.jpg" itemprop="contentUrl" data-size="1200x760">
+                    <a class="image" href="img/gallery_3.jpg" itemprop="contentUrl" data-size="1000x1000">
+                        <img src="img/gallery_3.jpg" itemprop="thumbnail" alt="Image description"/>
+                    </a>
+                    <figcaption hidden="hidden">Rust In Peace</figcaption>
+                </figure>
+
+                <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a class="image" href="img/gallery_4.jpg" itemprop="contentUrl" data-size="1000x1000">
+                        <img src="img/gallery_4.jpg" itemprop="thumbnail" alt="Image description"/>
+                    </a>
+                    <figcaption hidden="hidden">The Rise And Fall Of Ziggy Stardust And The Spiders From Mars (2012 Remastered Version)</figcaption>
+                </figure>
+
+                <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a class="image" href="img/gallery_5.jpg" itemprop="contentUrl" data-size="1000x1000">
+                        <img src="img/gallery_5.jpg" itemprop="thumbnail" alt="Image description"/>
+                    </a>
+                    <figcaption hidden="hidden">DAMN. COLLECTORS EDITION.</figcaption>
+                </figure>
+
+                <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a class="image" href="img/gallery_2.jpg" itemprop="contentUrl" data-size="1000x1000">
                         <img src="img/gallery_2.jpg" itemprop="thumbnail" alt="Image description"/>
                     </a>
+                    <figcaption hidden="hidden">KIDS SEE GHOSTS</figcaption>
+                </figure>
+
+                <figure class="item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                    <a class="image" href="img/gallery_1.jpg" itemprop="contentUrl" data-size="1000x1000">
+                        <img src="img/gallery_1.jpg" itemprop="thumbnail" alt="Image description"/>
+                    </a>
+                    <figcaption hidden="hidden">Dirty Computer</figcaption>
                 </figure>
             </div>
         </div>
