--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <!-- Template Basic Images End -->
 
     <!-- Custom Browsers Color Start -->
-    <meta name="theme-color" content="#eaeeef">
+    <meta name="theme-color" content="#f8f9fa">
     <!-- Custom Browsers Color End -->
 
     <link rel="stylesheet" href="css/main.min.css">
@@ -95,8 +95,7 @@
                 раньше. На современных компьютерах пишут и рисуют, делают мультфильмы, рекламные ролики и специальные
                 эффекты для фильмов. Особые программы помогают учиться, проектировать космические ракеты и города,
                 предсказывать погоду. Компьютеры позволяют создавать и записывать музыку, производить сложные научные
-                рассчеты и эксперименты, восстанавливать облик вымерших животных, прогнозировать будущее. Самые
-                интересные игры сегодня – это опять-таки компьютерные игры. Удивительно, но в основе всех перечисленных
+                расчеты и эксперименты, восстанавливать облик вымерших животных, прогнозировать будущее. Удивительно, но в основе всех перечисленных
                 профессий лежит всего лишь одно умение компьютера – умение производить математические вычисления
                 (сложение, вычитание, умножение, деление и т. д.) в определенной последовательности. Именно поэтому
                 компьютеры часто именуют Электронными Вычислительными Машинами (ЭВМ).</p>
@@ -148,7 +147,7 @@
                 ящик. Она могла считывать и сортировать статистические записи, закодированные на перфокартах. В 1890
                 году изобретение Холлерита было впервые использовано при переписи населения США. Результат превзошел все
                 ожидания. То, чем за десять лет до этого 500 сотрудников занимались в течение семи лет, Холлерит сделал
-                с 43 помошниками на 43 вычислительных машинах за 4 недели.</p>
+                с 43 помощниками на 43 вычислительных машинах за 4 недели.</p>
 
             <h3 class="title-3">Развитие ЭВМ</h3>
             <p class="paragraph">В 1941 году немецкий инженер Конрад Цузе создал первый вычислительный автомат с
@@ -157,7 +156,7 @@
                 и работала в двоичной системе счисления. Числа можно было записывать в память и считывать оттуда
                 посредством электрических сигналов, которые проходили через реле. Управляющая программа была
                 закодирована при помощи перфорированной ленты.</p>
-            <p class="paragraph">В США в 1943 году Говард Эйкен создал компьтер «Марк-1», который делал вычисления уже в
+            <p class="paragraph">В США в 1943 году Говард Эйкен создал компьютер «Марк-1», который делал вычисления уже в
                 сотни раз
                 быстрее, чем на арифмометре. Следующие разработки стали делать на основе электронных ламп, что позволило
                 увеличить скорость в тысячу раз. Первой была машина ЭНИАК Джона Мокли и Преспера Эккерта (1943). Сами
@@ -165,12 +164,12 @@
                 долгое время присоединять провода – для каждой программы в нужном порядке.</p>
             <p class="paragraph">В 1948 появились транзисторы. С их активным внедрением появилось второе поколение
                 компьютеров. Один
-                транзистор был способен заменить 40 электронных ламп. В результате бысродействие машин возросло в 10
+                транзистор был способен заменить 40 электронных ламп. В результате быстродействие машин возросло в 10
                 раз. Первые компьютеры на транзисторах были созданы в конце 1950-х годов.</p>
             <p class="paragraph">В 1959 году были изобретены интегральные микросхемы. Все электронные компоненты вместе
                 с проводниками
-                помещались внутрь кремнеевой пластинки. Таким образом увеличивалось количество вычисляющих компонент, и
-                скорость их работы повышалась в десятки раз. Уменьшились и габариты машин. С появленим микросхем (чипов)
+                помещались внутри кремниевой пластинки. Таким образом увеличивалось количество вычисляющих компонент, и
+                скорость их работы повысилась в десятки раз. Уменьшились и габариты машин. С появлением микросхем (чипов)
                 началось третье поколение компьютеров. Изобретатель чипа Роберт Нойс основал фирму Intel (Интел),
                 которая сейчас выпускает большую часть процессоров.</p>
             <p class="paragraph">В конце 1950-х годов были разработаны компьютерные языки FORTRAN и ALGOL. Появилась
@@ -180,18 +179,18 @@
                 программа была уникальна.</p>
             <p class="paragraph">С конца 1960-х годов была открыта еще одна возможность использования компьютеров.
                 Впервые несколько машин
-                были соединены в сеть Министерства обороны США. Передача информации от компьютера к компьюьеру открыла
+                были соединены в сеть Министерства обороны США. Передача информации от компьютера к компьютеру открыла
                 новые возможности. Такие сети стали создавать также университеты разных городов. Так рождались
                 глобальные сети типа Интернет, которые теперь объединяют весь мир.</p>
             <p class="paragraph">В начале 1975 года появился персональный компьютер Altair на основе микропроцессора
                 Intel 8080. Он
                 управлялся при помощи специальной панели переключателей. Для ввода и вывода данных использовался
-                дисковод 8-дюймовых гибких дисков, приобретавшийся отдельно. Altair был первым компьютером, который
+                дисковод 8-дюймовых гибких дисков, который приобретался отдельно. Altair был первым компьютером, который
                 выпускался для частных лиц и приобретался через торговую сеть.</p>
             <p class="paragraph">С конца 1970-х годов компания IBM начала выпуск своих персональных компьютеров (ПК).
                 Они делались по
                 принципу детского конструктора из набора деталей, поэтому их можно было быстро совершенствовать.</p>
-            <p class="paragraph">В то же время компьютеры перестают использоваться лишь для математических рассчетов, их
+            <p class="paragraph">В то же время компьютеры перестают использоваться лишь для математических расчетов, их
                 широко используют
                 для работы с текстом, картинками, звуком и т. д. Начинают выпускаться программы, с которыми могут
                 работать не только специалисты, но и обычные пользователи. Наконец, появляются первые компьютерные игры.
